--- a/Home.html
+++ b/Home.html
@@ -44,12 +44,12 @@ body {
 <body>
   
   <nav class="navbar sticky-top navbar-light bg-light">
-  <a class="navbar-brand" href="yusufa3/monkei.github.io">м σ и к єι</a>
-  <a class="active" href="yusufa3/monkei.github.io">Home</a>
-  <a href="D:\Yusuf\Documents\M o n k ei\Catalog.html">Catalog</a>
-  <a href="D:\Yusuf\Documents\M o n k ei\News.html">News</a>
-  <a href="D:\Yusuf\Documents\M o n k ei\Group.html">Group</a>
-  <a href="D:\Yusuf\Documents\M o n k ei\Jobs.html">Jobs</a>
+  <a class="navbar-brand" href="yusufa3.github.io">м σ и к єι</a>
+  <a class="active" href="yusufa3.github.io">Home</a>
+  <a href="yusufa3.github.io/Catalog">Catalog</a>
+  <a href="yusufa3.github.io/News">News</a>
+  <a href="yusufa3.github.io/Group">Group</a>
+  <a href="yusufa3.github.io/Jobs">Jobs</a>
 </nav>
 
 <style>
